--- a/options.html
+++ b/options.html
@@ -9,7 +9,9 @@
   <form id="settingform">
       <label>Enable for:</label><br>
       <input type="radio" name="setting" id="global" value="global"> All tabs<br>
-      <input type="radio" name="setting" id="tabs" value="tabs"> Only tabs I click the icon in
+      <input type="radio" name="setting" id="tabs" value="tabs"> Only tabs I click the icon in<br>
+      <label>Player Thumbnail:</label><br>
+      <input type="checkbox" name="setting" id="thumbpref">Enable
   </form>
   <script src="options.js"></script>
 </body>
